=======
CHANGES
=======

after 1.1.0
-----------

* forward the template kwargs to the options of the macro

1.1.0 (2007-10-08)
------------------

* Added an ``IContentTemplate`` interface which is used for 
  ``<z3c:template>``.

1.0.0 (2007-??-??)
------------------

* Initial release.