@@ -5,3 +5,8 @@ parts = test
 [test]
 recipe = zc.recipe.testrunner
 eggs = z3c.template [test]
+environment = test-environment
+
+[test-environment]
+Z3C_PT_DEBUG = False
+Z3C_PT_CACHE = False
