@@ -54,18 +54,20 @@ setup (
     package_dir = {'':'src'},
     namespace_packages = ['z3c'],
     extras_require = dict(
-        test = ['zope.app.testing', 'zope.testing'],
+        test = ['zope.app.testing',
+                'zope.testing',
+                'lxml>=2.1.1',
+                'z3c.pt'],
         ),
     install_requires = [
         'setuptools',
-        'zope.app.pagetemplate',
         'zope.component',
         'zope.configuration',
         'zope.interface',
         'zope.pagetemplate',
         'zope.publisher',
         'zope.schema',
-        'zope.tal',
+        'z3c.pt.compat [zpt]',
         ],
     include_package_data = True,
     zip_safe = False,
