@@ -5,6 +5,8 @@ CHANGES
 after 1.1.0
 -----------
 
+* Allow use of ``z3c.pt`` using ``z3c.pt.compat`` compatibility later.
+
 * forward the template kwargs to the options of the macro
 
 1.1.0 (2007-10-08)
